virt01/manual/databases/pgadmin4/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  namespace: databases
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.k3s.nf.lab
      secretName: pgadmin-tls
  rules:
    - host: pgadmin.k3s.nf.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin4
                port:
                  number: 80
